<resources>
    <string name="app_name">NutriTec</string>
    <string name="crear_una_cuenta">Crear una Cuenta</string>
    <string name="correo">Correo</string>
    <string name="g_nero">Género</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="edad">Edad</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_ahora">Registrate ahora !</string>
    <string name="usuario">Usuario</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="back">Atrás</string>
    <string name="options">Opciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer"> Open Drawer</string>
    <string name="close_drawer"> Close Drawer</string>
    <string name="default_web_client_id">548570325324-16vilgcejmkkbbc2vukt6v1fiof7il61.apps.googleusercontent.com</string>
</resources>