<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo_login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registro">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear_una_cuenta"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- EditText para Nombre y Apellidos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edtNombre"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/nombre"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"/>

                <EditText
                    android:id="@+id/edtApellido"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/apellidos"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"/>
            </LinearLayout>

            <!-- EditText para Edad y Género -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edtEdad"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_calendar_month_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/edad"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"/>

                <EditText
                    android:id="@+id/edtGenero"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_accessibility_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/g_nero"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cardview_dark_background"/>
            </LinearLayout>

            <!-- EditText para Correo -->
            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_chat_24"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"
                android:focusable="false"
                android:enabled="false"/>


            <!-- EditText para Contraseña -->
            <EditText
                android:id="@+id/edtContraseña"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_block_24"
                android:drawablePadding="8dp"
                android:hint="@string/contrase_a"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"/>

            <!-- EditText para Altura -->
            <EditText
                android:id="@+id/edtAltura"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="altura_cm"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"/>

            <!-- EditText para Peso -->
            <EditText
                android:id="@+id/edtPeso"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="peso_kg"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background"/>

            <!-- Botón de Registrar -->
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/registrar"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
