<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/nutri_login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicio_de_sesion"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Logo debajo del texto "Inicio de sesión" -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/nutritec" />

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_block_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="Iniciar Sesión"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleSignIn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/logo_de_google"
                android:text="Inicia Sesión con Google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:iconGravity="textStart" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
